# pfem2dealii

./: .gitignore  CMakeLists.txt  README.md
cases/PoiseuilleFlow3D/: CMakeLists.txt  PoiseuilleFlow3D.cc  PoiseuilleFlow3D.h  cleanAll.sh  input_data.prm
cases/TurekBenchmark/: CMakeLists.txt  Mesh3.tgz  TurekBenchmark.cc  TurekBenchmark.h  cleanAll.sh  input_data.prm
cases/TurekBenchmarkCuda/: CMakeLists.txt  Mesh2.tgz  TurekBenchmark.cu  TurekBenchmark.cuh
cases/nacaAirfoil/: CMakeLists.txt  airfoilMeshFine.tgz  input_data.prm  nacaAirfoil.cc  nacaAirfoil.h
cmake/: functions.cmake  setup_deal_ii.cmake
src/: pfem2fem.cpp  pfem2fem.h  pfem2parameterhandler.cpp  pfem2parameterhandler.h  pfem2particle.cpp  pfem2particle.h  pfem2particlehandler.cpp  pfem2particlehandler.h  pfem2solver.cpp  pfem2solver.h
src/cuda/: cuda_helper.cuh  cudapfem2fem.cu  cudapfem2fem.cuh  cudapfem2finiteelement.cu  cudapfem2finiteelement.cuh  cudapfem2mapping.cu  cudapfem2mapping.cuh  cudapfem2particle.cu  cudapfem2particle.cuh  cudapfem2particlehandler.cu  cudapfem2particlehandler.cuh
utils/repairMesh/: CMakeLists.txt  repairMesh.cc
utils/repairMesh3D/: CMakeLists.txt  repairMesh3D.cc
