CMAKE_MINIMUM_REQUIRED(VERSION 3.7.1)

include(CMakePrintHelpers)

SET(PROJECT_NAME "repairMesh3D")
SET(PROJECT_PATH ${CMAKE_CURRENT_SOURCE_DIR})

PROJECT(${PROJECT_NAME})

INCLUDE(${PROJECT_PATH}/../../cmake/setup_deal_ii.cmake)

add_executable(${PROJECT_NAME} ${PROJECT_NAME}.cc)

target_include_directories(${PROJECT_NAME} SYSTEM PRIVATE ${DEAL_II_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} PRIVATE ${DEAL_II_LIBRARIES})

set_target_properties(${PROJECT_NAME} PROPERTIES INSTALL_RPATH_USE_LINK_PATH TRUE)
if(NOT DEFINED CMAKE_INSTALL_PREFIX)
	set(CMAKE_INSTALL_PREFIX "${PROJECT_PATH}/../../install" CACHE PATH "..." FORCE)
endif()
install(TARGETS ${PROJECT_NAME} DESTINATION bin)
